--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,5 @@ build/
 .gradle/buildOutputCleanup/buildOutputCleanup.lock
 .gradle/buildOutputCleanup/cache.properties
 .gradle/vcs-1/gc.properties
+.idea/codeStyles/codeStyleConfig.xml
+.idea/codeStyles/Project.xml
