WIP: Rabbit updates

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,5 +12,10 @@ app:
     dynamo:
       endpoint: ${AWS_DYNAMO_ENDPOINT}
       permissionTableName: ${AWS_DYNAMO_PERMISSION_TABLE_NAME}
+  rabbit-mq:
+    host: ${RABBITMQ_HOST}
+    port: ${RABBITMQ_PORT}
+    username: ${RABBITMQ_USERNAME}
+    password: ${RABBITMQ_PASSWORD}
 server:
   port: 80
