--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,11 @@ services:
       - AWS_DYNAMO_ENDPOINT=${AWS_DYNAMO_ENDPOINT}
       - AWS_DYNAMO_PERMISSION_TABLE_NAME=${AWS_DYNAMO_PERMISSION_TABLE_NAME}
       - AWS_REGION=${AWS_REGION}
+      - RABBITMQ_HOST=${RABBITMQ_HOST}
+      - RABBITMQ_VIRTUAL_HOST=${RABBITMQ_VIRTUAL_HOST}
+      - RABBITMQ_PORT=${RABBITMQ_PORT}
+      - RABBITMQ_USERNAME=${RABBITMQ_USERNAME}
+      - RABBITMQ_PASSWORD=${RABBITMQ_PASSWORD}
     ports:
       - 3010:80
     platform: linux/amd64
