--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,11 @@ aws:
   dynamo:
     endpoint: ${AWS_DYNAMO_ENDPOINT}
     permissionTableName: ${AWS_DYNAMO_PERMISSION_TABLE_NAME}
+server:
+  port: 80
 spring:
+  main:
+    allow-bean-definition-overriding: true
   rabbitmq:
     host: ${RABBITMQ_HOST}
     virtualhost: ${RABBITMQ_VIRTUAL_HOST}
@@ -20,5 +24,3 @@ spring:
     password: ${RABBITMQ_PASSWORD}
     publisher-confirm-type: correlated
     publisher-returns: true
-server:
-  port: 80
